# pgpaste

./: .gitattributes  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Justfile  README.md  Schema.tldr  docker-compose.local.yaml  docker-compose.production.yaml  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
pgpaste-api-types/: Cargo.toml
pgpaste-api-types/src/: api.rs  lib.rs
pgpaste-app/: Cargo.toml
pgpaste-app/src/: error.rs  lib.rs  utils.rs
pgpaste-app/src/components/: nav.rs
pgpaste-app/src/pages/: home.rs  mod.rs  not_found.rs  paste.rs  playground.rs  settings.rs
pgpaste-app/tests/: navigation.rs
pgpaste-cli/: Cargo.toml  config.toml
pgpaste-cli/src/: args.rs  config.rs  main.rs
pgpaste-cli/src/commands/: create.rs  mod.rs  read.rs
pgpaste-cli/src/crypto/: mod.rs  receive.rs  send.rs
pgpaste-front/: Cargo.toml
pgpaste-front/src/: lib.rs
pgpaste-server/: Cargo.toml  docker-compose.local.yml
pgpaste-server/migrations/2023-04-29-114407_create_pastes_and_key_users/: down.sql  up.sql
pgpaste-server/src/: config.rs  crypto.rs  error.rs  file_server.rs  main.rs  routines.rs
pgpaste-server/src/api/: create.rs  mod.rs  read.rs
pgpaste-server/src/database/: mod.rs  models.rs  query.rs  schema.rs
pgpaste-server/src/routes/: mod.rs
pgpaste-web/: .gitignore  Cargo.toml  idea.txt  index.html  rustfmt.toml
pgpaste-web/src/: lib.rs  main.rs
pgpaste-web/src/components/: footer.rs  mod.rs  nav.rs
pgpaste-web/src/pages/: about.rs  home.rs  paste.rs
