[workspace]
members = ["pgpaste-api-types", "pgpaste-cli", "pgpaste-server"]
resolver = "2"

[workspace.dependencies]
pgpaste-api-types.path = "pgpaste-api-types"

sequoia-net = "0.27"
sequoia-openpgp = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
# missing_docs = "warn"
[workspace.lints.rustdoc]
all = "warn"
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

# expect_used = "warn"
# missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"
