[package]
name = "pgpaste-api-types"
description = "Types for the pgpaste API"
version = "0.0.0"
edition = "2024"

repository = "https://github.com/mrnossiom/pgpaste"
readme = "../README.md"
keywords = ["pgpaste", "api-types"]
categories = ["web-programming"]
license = "CECIL-B"

[dependencies]
mime = "0.3"
serde = { version = "1", features = ["derive"] }
