[package]
name = "pgpaste-app"
description = "The pgpaste web interface"
repository = "https://github.com/MrNossiom/pgpaste"
readme = "../README.md"
keywords = ["pgpaste", "leptos", "web"]
categories = ["web-programming"]
version = "0.0.0"
edition = "2021"
license = "CECIL-B"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgpaste-api-types = { workspace = true }

leptos = { workspace = true, features = ["nightly"] }
leptos_meta = { workspace = true, features = ["nightly"] }
leptos_router = { workspace = true, features = ["nightly"] }
sequoia-openpgp-wasm = { workspace = true }
rmp-serde = { workspace = true }
log = { workspace = true }
eyre = { workspace = true }

stylers = "0.3.1"
tracing = "0.1.37"
thiserror = "1.0.44"
http = "0.2.9"

# Client-side only deps
gloo-net = { version = "0.3.1", optional = true }
web-sys = { version = "0.3.64", optional = true, features = [
	"AbortController",
] }
# Server-side only deps
reqwest = { version = "0.11.18", optional = true }
leptos_axum = { workspace = true, optional = true }

[dependencies.leptos_icons]
version = "0.0.15"
features = ["FiExternalLink", "FiSearch", "SiGithub"]

[dev-dependencies]
gloo = { version = "0.9.0", features = ["gloo-timers", "futures"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3.64"

[features]
default = []
hydrate = [
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
	"_client-deps",
]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "_client-deps"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "_server-deps"]

# Server or client side only deps
_client-deps = ["dep:gloo-net", "dep:web-sys"]
_server-deps = ["dep:leptos_axum", "dep:reqwest"]

__test = ["csr"]
