[package]
name = "pgpaste-cli"
description = "A command line interface for pgpaste"
repository = "https://github.com/MrNossiom/pgpaste"
categories = ["command-line-utilities"]
keywords = ["pgpaste", "clipboard", "api", "cli", "paste"]
readme = "../README.md"
version = "0.0.0"
edition = "2021"
license = "CECILL-B"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pgpaste"
path = "src/main.rs"

[dependencies]
pgpaste-api-types = { workspace = true }
sequoia-openpgp = { workspace = true }
serde = { workspace = true }
mime = { workspace = true }
rmp-serde = { workspace = true }

anyhow = "1.0.72"
async-compat = "0.2.1"
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"
dirs = "5.0.1"
duration-human = "0.1.10"
eyre = "0.6.8"
log = "0.4.19"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
rpassword = "7.2.0"
sequoia-net = "0.27.0"
smol = "1.3.0"
toml = "0.7.6"
