[package]
name = "pgpaste-cli"
description = "A command line interface for pgpaste"
version = "0.0.0"
edition = "2024"

repository = "https://github.com/MrNossiom/pgpaste"
categories = ["command-line-utilities"]
keywords = ["pgpaste", "clipboard", "api", "cli", "paste"]
readme = "../README.md"
license = "CECILL-B"

[[bin]]
name = "pgpaste"
path = "src/main.rs"

[dependencies]
pgpaste-api-types.workspace = true

sequoia-net.workspace = true
sequoia-openpgp.workspace = true

anyhow = "1"
async-compat = "0.2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
duration-human = "0.1"
eyre = "0.6"
log = "0.4"
mime = "0.3"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["blocking"] }
rmp-serde = "1"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
smol = "2"
toml = "0.8"
