[package]
name = "pgpaste-server"
description = "The actual pgpaste server"
version = "0.0.0"
edition = "2024"

repository = "https://github.com/mrnossiom/pgpaste"
readme = "../README.md"
keywords = ["pgpaste", "paste", "server"]
categories = ["web-programming::http-server"]
license = "CECILL-B"
publish = true

[dependencies]
pgpaste-api-types.workspace = true

sequoia-net.workspace = true
sequoia-openpgp.workspace = true

anyhow = "1"
axum = { version = "0.8", features = ["tracing", "macros"] }
bytes = "1"
diesel = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2", features = ["postgres"] }
dotenvy = "0.15"
eyre = "0.6"
mime = "0.3"
petname = "2"
rmp-serde = "1"
secrecy = "0.10"
serde = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["tracing", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
