[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgpaste-api-types = { path = "../../Personal/pgpaste/pgpaste-api-types" }

cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
gloo-net = "0.3.1"
leptos = { version = "0.4.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.4.6", features = ["csr", "nightly"] }
log = "0.4.19"
rmp-serde = "1.1.2"
sequoia-openpgp = { version = "1.16.0", default-features = false, features = [
	"allow-experimental-crypto",
	"allow-variable-time-crypto",
	"crypto-rust",
] }
stylers = { git = "https://github.com/abishekatp/stylers.git" }

[patch.crates-io]
sequoia-openpgp = { path = "../../Exploration/sequoia/openpgp" }

[dependencies.leptos_icons]
version = "0.0.15"
features = ["FiExternalLink", "FiSearch", "SiGithub"]
